--- a/src/pages/index/index.html
+++ b/src/pages/index/index.html
@@ -24,7 +24,7 @@
             <a class="navigation__link navigation__link_theme_light" href="./articles.html">Сохраненные статьи</a>
           </li>
           <li class="navigation__item navigation__item_place_header">
-            <button id="button-login-screen" class="button button__text button_type_screen-main-action button_border_light">Авторизоваться</button>
+            <!-- <button id="button-login-screen" class="button button__text button_type_screen-main-action button_border_light">Авторизоваться</button> -->
           </li>
         </ul>
         <img class="header__menu-icon" src="<%=require('../../images/icons/menu-icon-white.svg')%>" alt="Menu icon">
@@ -57,9 +57,10 @@
             <a class="navigation__link navigation__link_theme_light" href="./articles.html">Сохраненные статьи</a>
           </li>
           <li class="navigation__item navigation__item_place_mobile-menu">
-            <button id="button-logout-mobile" class="button button__text button_border_light button_type_mobile-main-action">Грета&nbsp;
+            <!-- <button id="button-logout-mobile" class="button button__text button_border_light button_type_mobile-main-action">Грета&nbsp;
               <img class="button__icon" src="<%=require('../../images/icons/logout-white.svg') %>" alt="Кнопка выхода из профиля">
-            </button>
+            </button> -->
+            <button id="button-login-screen" class="button button__text button_type_screen-main-action button_border_light">Авторизоваться</button>
           </li>
         </ul>
       </div>
