refactor: replace files

--- a/src/pages/index/index.html
+++ b/src/pages/index/index.html
@@ -216,7 +216,7 @@
                 <span class="form__error form__error_type_server-error" id="server-error"></span>
               </div>
             </fieldset>
-            <button class="form__button form__button_inactive">Зарегистрироваться</button>
+            <button class="form__button form__button_inactive" disabled>Зарегистрироваться</button>
             <p class="form__redirect-text">или <a class="form__redirect-link" href="#popup-signin">Войти</a></p>
           </form>
 
