feat: add classes

--- a/src/pages/index/index.html
+++ b/src/pages/index/index.html
@@ -181,7 +181,7 @@
               </div>
             </fieldset>
             <button class="form__button form__button_inactive" disabled>Войти</button>
-            <p class="form__redirect-text">или <a class="form__redirect-link" href="#popup-signup">Зарегистрироваться</a></p>
+            <p class="form__redirect-text">или <a class="form__redirect-link" href="/">Зарегистрироваться</a></p>
           </form>
 
           <form id="form-signup" class="form">
@@ -216,8 +216,8 @@
                 <span class="form__error form__error_type_server-error" id="server-error"></span>
               </div>
             </fieldset>
-            <button class="form__button form__button_inactive" disabled>Зарегистрироваться</button>
-            <p class="form__redirect-text">или <a class="form__redirect-link" href="#popup-signin">Войти</a></p>
+            <button id="signin-form-button" class="form__button form__button_inactive" disabled>Зарегистрироваться</button>
+            <p class="form__redirect-text">или <a class="form__redirect-link" href="/">Войти</a></p>
           </form>
 
           <div class="success-message">
